--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game",
   "version": "1.0.0",
   "description": "Meu primeiro jogo online",
-  "main": "serve.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^2.4.1"
   }
 }
