--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "socket.io": "^4.1.3"
   },
-  "browser": "./public"
+  "browser": "./public",
+  "devDependencies": {
+    "@vercel/node": "^2.15.6"
+  }
 }
